# prilka

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: CMakeLists.txt  CMakePresets.json  Dockerfile
backend/src/: main.cpp
backend/src/config/: Config.h
backend/src/controllers/: AdminDashboardController.cpp  AdminDashboardController.h  AdminMessagesController.cpp  AdminMessagesController.h  AdminSupportController.cpp  AdminSupportController.h  AdminUsersController.cpp  AdminUsersController.h  AuthController.cpp  AuthController.h  ChatsController.cpp  ChatsController.h  FilesController.cpp  FilesController.h  InvitesController.cpp  InvitesController.h  MessagesController.cpp  MessagesController.h  ReactionsController.cpp  ReactionsController.h  SettingsController.cpp  SettingsController.h  StickersController.cpp  StickersController.h  UsersController.cpp  UsersController.h  WebController.cpp  WebController.h
backend/src/filters/: AdminFilter.cpp  AdminFilter.h  AuthFilter.cpp  AuthFilter.h
backend/src/services/: JwtService.cpp  JwtService.h  MetricsService.cpp  MetricsService.h
backend/src/utils/: MinioPresign.h
backend/src/ws/: WsHandler.cpp  WsHandler.h
backend/tests/: CMakeLists.txt  test_auth.cpp  test_metrics.cpp
backend/www/: index.html  login.html  register.html
backend/www/admin/: admin.css  admin.js  index.html
backend/www/assets/: AdminDashboard-0I5XF36L.js  AdminDashboard-0W8xIgjp.js  AdminDashboard-4KEH9Jmv.js  AdminDashboard-8esCgeyD.js  AdminDashboard-B29Zwk2T.js  AdminDashboard-B3Ay8z2r.js  AdminDashboard-B3URGurI.js  AdminDashboard-B6R-JElz.js  AdminDashboard-BECx33Kg.js  AdminDashboard-BFWHs9y7.js  AdminDashboard-BGuRrIh3.js  AdminDashboard-BN0WPtww.js  AdminDashboard-BPJqnqP0.js  AdminDashboard-BW2pWkP1.js  AdminDashboard-BX1SvdD5.js  AdminDashboard-Bd8IbGnM.js  AdminDashboard-BmKTeDKT.js  AdminDashboard-BrAhAS7w.js  AdminDashboard-BrGiuoHL.js  AdminDashboard-C0X1YyX0.js  AdminDashboard-C0rTFICf.js  AdminDashboard-C1Qkx8IA.js  AdminDashboard-CF7m2Xnt.js  AdminDashboard-CKjVesGd.js  AdminDashboard-CLeKuGhy.js  AdminDashboard-CMbfQPy9.js  AdminDashboard-CPWEm5uM.js  AdminDashboard-CPX0DVrN.js  AdminDashboard-CgwrGKWd.js  AdminDashboard-Ci1G1WMe.js  AdminDashboard-Ck27oJs6.js  AdminDashboard-CqhO72Oj.js  (+735 more)
(+214 files in other folders)
